# TinySoftRasterizer

./: CMakeLists.txt  README.md  Renderer Pipeline.xmind  软光栅.xmind
1-DrawLineBase/: CMakeLists.txt  main.cpp
1-Wireframe/: CMakeLists.txt  main.cpp
2-DrawFlatModel/: CMakeLists.txt  geometry.h  main.cpp
2-DrawTriangle/: CMakeLists.txt  main.cpp
2-DrawTriangleBarycentric/: CMakeLists.txt  geometry.h  main.cpp
3-zBuffer/: CMakeLists.txt  main.cpp
4-1-Transformation/: CMakeLists.txt  main.cpp  tinymathlib.h
4-1-TransformationAxis/: CMakeLists.txt  model.h
4-2-ModelDiffuse/: CMakeLists.txt  main.cpp  tinymathlib.h
4-3-MVPMatrix/: CMakeLists.txt  main.cpp
4-Transformation/: CMakeLists.txt  tinymathlib.h
5-1-Shader/: CMakeLists.txt  main.cpp  model.cpp  model.h
6-1-ShadowMap/: CMakeLists.txt  model.h
DrawLineBase/: CMakeLists.txt  main.cpp
Output/: MVPMatrix.tga  ModelDiffuse.tga  Shader.tga  TransfromationAxis.tga  zbufferTest.tga
Wireframe/: CMakeLists.txt  main.cpp
